Fri Nov 19 06:55:32 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/bor.mpd:

          If there is no exe or lib target, don't include one of the *.bor
          from include/makeinclude and create a dummy 'all' target.

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Added $(EXEEXT) to the end of the TAO_IDL_DEP assignment to
          support windows builds.

Fri Nov 19 09:48:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd:
          Only generate CPPDIR and CDIR when cppdir is defined, this fixes
          build problems when a project is tried to build without source
          code

Fri Nov 19 09:35:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          Added define ACE_LACKS_PWD_FUNCTIONS, Win32 doesn't have this also,
          and by setting this define we don't need to explicitly check for
          win32 anymore when we use this macro.

        * ace/OS_NS_pwd.inl:
          Simplified some checks, just check for ACE_LACKS_PWD_FUNCTIONS
          and not also for ACE_WIN32

        * examples/APG/Processes/Spawn.cpp:
          Just check for ACE_LACKS_PWD_FUNCTIONS

Thu Nov 17 15:55:00 2004  Gary Maxey  <gary.maxey@hp.com>

        * bin/PerlACE/Process_Unix.pm

          Add logic for "nonstop_kernel" platform quirks

        * bin/PerlACE/Run_Test.pm

          Define "wait_interval_for_process_creation" variable
          to allow for per-platform customization.

Thu Nov 18 19:22:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Processes/Spawn.cpp:
          Don't call setUserId when ACE_WIN32 and ACE_LACKS_PWD_FUNCTIONS are
          not set, then this method is just not there.

Thu Nov 18 11:52:19 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/ciao_servant.mpb:
        * bin/MakeProjectCreator/config/ciao_servant_dnc.mpb: