@@ -98,8 +98,10 @@ private:
 
 //////////////////////////////////////////////////
 
-#if defined (__GNUC__) && (__GNUC__ >= 3 || __GNUC_MINOR__ > 95)
+#if defined (__GNUC__) && (__GNUC__ >= 3 || __GNUC_MINOR__ > 95) && \
+    (!defined (VXWORKS) || !(__GNUC__ == 2 && __GNUC_MINOR__ == 96))
 // This stuff only works with g++ 2.96 and later...
+// But not with VxWorks g++ 2.96.
 
 // Listing 3 code/ch03
 
