@@ -1,11 +1,13 @@
 // $Id$
 
-#if defined (__GNUC__) && (__GNUC__ >= 3 || __GNUC_MINOR__ > 95)
-// The macros in Trace.h only work on g++ 2.96 and later.
-
-// Listing 1 code/ch03
 #include "Trace.h"
 
+#if defined (__GNUC__) && (__GNUC__ >= 3 || __GNUC_MINOR__ > 95) && \
+    (!defined (VXWORKS) || !(__GNUC__ == 2 && __GNUC_MINOR__ == 96))
+// The macros in Trace.h only work on g++ 2.96 and later.
+// But not with VxWorks g++ 2.96.
+
+// Listing 1 code/ch03
 void foo (void);
 
 int ACE_TMAIN (int, ACE_TCHAR *[])
